<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/table_head_row_1"
            style="@style/table_head_item"
            android:text="@string/trip_head_item_1"
            android:background="@color/orange"
            />
    </LinearLayout>

    <ImageView
        style="@style/table_vertial_line"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/table_head_row_2"
            style="@style/table_head_item"
            android:text="@string/trip_head_item_2"
            />
    </LinearLayout>

    <ImageView
        style="@style/table_vertial_line"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/table_head_row_3"
            style="@style/table_head_item"
            android:text="@string/trip_head_item_3"
            android:background="@color/orange"
            />
    </LinearLayout>

    <ImageView
        style="@style/table_vertial_line"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/table_head_row_4"
            style="@style/table_head_item"
            android:text="@string/trip_head_item_4"
            />
    </LinearLayout>


</LinearLayout>