<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MeterTestActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            >
            <TextView
                style="@style/title_tv_style"
                android:text="@string/meter_test_str"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <Button
                    android:id="@+id/meter_enable_bt"
                    android:text="@string/meter_enable"
                    style="@style/base_bt"
                    />
                <Button
                    android:id="@+id/meter_disable_bt"
                    android:text="@string/meter_disable"
                    style="@style/base_bt"
                    />
                <Button
                    android:id="@+id/current_status_bt"
                    android:text="@string/current_status"
                    style="@style/base_bt"
                    />
                <Button
                    android:id="@+id/add_surchare_bt"
                    android:text="@string/add_surchare"
                    style="@style/base_bt"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        style="@style/subtitle_str_tv_style"
                        android:text="@string/meter_status_str"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        >

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            >
                            <TextView
                                android:id="@+id/meter_status_tv"
                                style="@style/table_head_item"
                                android:background="@color/green"
                                android:text="@string/taxi_str"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            >


                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    >
                    <TextView
                        style="@style/subtitle_str_tv_style"
                        android:text="@string/erp_info_str"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">
                        <include layout="@layout/trip_head_list_item"></include>
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/trip_recucleview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </android.support.v7.widget.RecyclerView>

                    </LinearLayout>

                </LinearLayout>





            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>